--- a/index.html
+++ b/index.html
@@ -137,5 +137,6 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/key.js"></script>
   <script src="./src/main.js"></script>
+  <script src="./src/navigation.js"></script>
 
   </html>
